--- a/src/index.css
+++ b/src/index.css
@@ -28,31 +28,55 @@ body {
   font-weight: 400;
 }
 
+h1 {
+  margin: 0;
+}
+
+.button {
+  padding: 12px 20px;
+  border-radius: 12px;
+  background-color: #c3b9f2;
+  border: none;
+  margin-top: 36px;
+}
+
+.button:hover {
+  cursor: pointer;
+}
+
+.button-purple {
+  background-color: #c3b9f2;
+}
+
+.button-green {
+  background-color: #d9ddc1;
+}
+
 .container {
   display: flex;
   justify-content: center;
   margin: 60px auto;
   width: 80vw;
-  height: 70vh;
+  height: 90vh;
 }
 
 .project-sidebar {
   width: 315px;
-  height: 100%;
   background-color: black;
   border-radius: 30px;
   color: white;
   padding: 78px 35px;
 }
 
-h1 {
-  margin: 0;
-}
+.no-project {
+  width: 70vw;
+  height: 100%;
+  background-color: #d9ddc1;
+  margin-left: 20px;
+  border-radius: 30px;
+  text-align: center;
 
-.button-purple {
-  padding: 12px 20px;
-  border-radius: 12px;
-  background-color: #c3b9f2;
-  border: none;
-  margin-top: 36px;
+  .headline {
+    margin-top: 128px;
+  }
 }
