--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@ body {
 
 :root {
   background-color: #c3b9f2;
+
+  li {
+    list-style: none;
+  }
 }
 
 .font-headline {
@@ -75,6 +79,15 @@ h1 {
   border-radius: 30px;
   color: white;
   padding: 78px 35px;
+
+  .projects {
+    padding: 0;
+    margin-top: 38px;
+
+    button {
+      width: 100%;
+    }
+  }
 }
 
 .content {
@@ -99,10 +112,6 @@ h1 {
     display: flex;
     align-items: center;
     justify-content: flex-end;
-
-    li {
-      list-style: none;
-    }
 
     button {
       margin-left: 10px;
