--- a/src/index.css
+++ b/src/index.css
@@ -87,7 +87,7 @@ h1 {
 }
 
 .project-sidebar {
-  width: 315px;
+  width: 20vw;
   background-color: black;
   border-radius: 30px;
   color: white;
@@ -101,6 +101,7 @@ h1 {
       width: 100%;
       text-align: left;
       padding-left: 33px;
+      margin-bottom: 10px;
     }
   }
 }
@@ -110,6 +111,7 @@ h1 {
   background-color: #d9ddc1;
   margin-left: 20px;
   border-radius: 30px;
+  padding: 67px 113px;
 }
 
 .no-project {
@@ -121,8 +123,6 @@ h1 {
 }
 
 .new-project {
-  padding: 67px 113px;
-
   .new-project-buttons {
     display: flex;
     align-items: center;
@@ -144,5 +144,27 @@ h1 {
 
   input {
     margin-bottom: 16px;
+  }
+}
+
+.selected-project {
+  padding: 78px 112px;
+
+  div:first-child {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .title {
+    font-size: 40px;
+  }
+
+  .date {
+    margin: 10px 0 0 0;
+  }
+
+  .description {
+    margin: 60px 0 0 0;
+    white-space: pre-wrap;
   }
 }
